tests/ui/nll/match-guards-always-borrow.stderr
error[E0507]: cannot move out of `foo` in pattern guard
  --> $DIR/match-guards-always-borrow.rs:12:14
   |
LL |             (|| { let mut bar = foo; bar.take() })();
   |              ^^                 --- move occurs because `foo` has type `&mut Option<&i32>`, which does not implement the `Copy` trait
   |              |
   |              `foo` is moved here
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard
help: consider cloning the value if the performance cost is acceptable
   |
LL |             (|| { let mut bar = foo.clone(); bar.take() })();
   |                                    ++++++++

error[E0507]: cannot move out of `foo` in pattern guard
  --> $DIR/match-guards-always-borrow.rs:21:14
   |
LL |             (|| { let mut bar = foo; bar.take() })();
   |              ^^                 --- move occurs because `foo` has type `&mut Option<&i32>`, which does not implement the `Copy` trait
   |              |
   |              `foo` is moved here
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard
help: consider cloning the value if the performance cost is acceptable
   |
LL |             (|| { let mut bar = foo.clone(); bar.take() })();
   |                                    ++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
